<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_mahasiswa"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/nama"
                app:layout_constraintBottom_toTopOf="@id/tv_umur"
                android:textColor="@color/textGray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_mahasiswa"
                app:layout_constraintTop_toTopOf="@+id/img_mahasiswa" />

            <TextView
                android:id="@+id/tv_umur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/umur"
                android:textColor="@color/textGray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_mahasiswa"
                app:layout_constraintEnd_toEndOf="@+id/tv_nama"
                app:layout_constraintStart_toStartOf="@+id/tv_nama"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>