<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/TextInputLayout"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_textview"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:paddingBottom="4dp"
            android:text="@string/template1"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_textview"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:textAllCaps="false"
            android:paddingBottom="4dp"
            android:onClick="onClick"
            android:text="@string/template2"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            app:layout_constraintTop_toTopOf="@+id/btn_1" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_textview"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:textAllCaps="false"
            android:gravity="start"
            android:text="@string/template3"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="@+id/btn_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_1" />

        <Button
            android:id="@+id/btn_4"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:background="@drawable/bg_textview"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/template4"
            android:textAllCaps="false"
            android:layout_marginStart="12dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/btn_3"
            app:layout_constraintTop_toTopOf="@+id/btn_3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="14dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/cv_profil"
                    layout="@layout/item_title_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_giftcard"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/ucapan_selamat"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cv_profil"
                    app:layout_constraintStart_toStartOf="@+id/cv_profil"
                    app:layout_constraintTop_toBottomOf="@+id/cv_profil">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ucapan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn"
            android:text="@string/simpan"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>